// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodePane component renders a node 1`] = `
<div
  className="compatibility-node-pane"
>
  <NodeList
    nodes={
      Array [
        Object {
          "actorID": "test-actor",
          "attributes": Array [],
          "nodeName": "test-element",
          "nodeType": 1,
        },
      ]
    }
  />
</div>
`;

exports[`NodePane component renders some nodes 1`] = `
<details
  className="compatibility-node-pane"
>
  <summary
    className="compatibility-node-pane__summary"
  >
    2 occurrences
  </summary>
  <NodeList
    nodes={
      Array [
        Object {
          "actorID": "test-actor-1",
          "attributes": Array [],
          "nodeName": "test-element-1",
          "nodeType": 1,
        },
        Object {
          "actorID": "test-actor-2",
          "attributes": Array [],
          "nodeName": "test-element-2",
          "nodeType": 1,
        },
      ]
    }
  />
</details>
`;
